--- a/admin-server/src/main/resources/application.yml
+++ b/admin-server/src/main/resources/application.yml
@@ -1,10 +1,28 @@
 server:
   port: 8811
+info:
+  app:
+    name: @project.artifactId@
+    encoding: @project.build.sourceEncoding@
+    java:
+      source: @java.version@
+      target: @java.version@
 spring:
   application:
     name: spring-boot-admin-server
-#eureka:
-#  client:
-#    service-url:
-#      defaultZone: ${EUREKA_SERVICE_URL:http://localhost:8811}/eureka/
+eureka:
+  client:
+    service-url:
+      defaultZone: http://172.19.23.157:8810/eureka
+  instance:
+    prefer-ip-address: true # 将自己的IP注册到eureka server，如果为false（默认），则注册的是hostname
+    instance-id: ${spring.application.name}:${server.port}
 
+management:
+  endpoints:
+    web:
+      exposure:
+        include: "*"
+  endpoint:
+    health:
+      show-details: ALWAYS
