--- a/pom.xml
+++ b/pom.xml
@@ -13,6 +13,7 @@
     <modules>
         <module>admin-server</module>
         <module>admin-client</module>
+        <module>eureka-server</module>
     </modules>
 
     <parent>
