--- a/admin-client/src/main/resources/application.yml
+++ b/admin-client/src/main/resources/application.yml
@@ -10,6 +10,10 @@ info:
 spring:
   application:
     name: spring-boot-admin-client
+  security:
+    user:
+      name: "admin"
+      password: "admin"
 
 # 不再使用SBA client注册
 #  boot:
@@ -26,6 +30,9 @@ eureka:
   instance:
     prefer-ip-address: true # 将自己的IP注册到eureka server，如果为false（默认），则注册的是hostname
     instance-id: ${spring.application.name}:${server.port}
+    metadata-map:
+      user.name: ${spring.security.user.name}
+      user.password: ${spring.security.user.password}
 
 management:
   endpoints:
